--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11" integrity="sha384-OZmxTjkv7EQo5XDMPAmIkkvywVeXw59YyYh6zq8UKfkbor13jS+5p8qMTBSA1q+F" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue-router@3.3.4" integrity="sha384-5ysQLF+E+9b/+wTnlloO2ONS/4Hy5q6LeqxMyyGo9thRvTM1fuX3HjtghzRbHORv" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js" integrity="sha384-D3h8dHOchE4dpiSVF7wlFB9zw6Zq36WzHs85BgdKSSzLi7iamPNts7BGXd1qmz3y" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/style.css">
     </head>
     <body>
