--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
         <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js" integrity="sha384-D3h8dHOchE4dpiSVF7wlFB9zw6Zq36WzHs85BgdKSSzLi7iamPNts7BGXd1qmz3y" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue-select@3.11.2/dist/vue-select.min.js" integrity="sha384-+DuwySt9/V4X8jnNrpdUumsBUBmj2yMfKCQbJdH2Zkdddy72uzvNwaNXZ+8k2R/B" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue-async-computed@3.9.0/dist/vue-async-computed.min.js" integrity="sha384-ieE1yiiXIaSr1kQkBIRL5PlBu4zG1VagSb9TrTWsN2mkiV01BM5GDc//qde+OL4z" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/xterm@4.15.0/lib/xterm.min.js" integrity="sha384-vxhRmVNOQS04V6QkPmKqOmHo0k4110VgJO83Zyyd4DyWz2eoh0/qYUnn0HxU71RP" crossorigin="anonymous"></script>
+        <script src="fitAddon.js"></script>
         <link rel="stylesheet" href="/style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-select@3.11.2/dist/vue-select.css" integrity="sha256-UOIZG7xYf0GO+FyQ44Mg1IMCo/2Y5T5ar2OooAanClQ=" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.15.0/css/xterm.css" integrity="sha384-KX/RrKZocv0anGkMv5H4RernMDcOW5zA5PqbmnxJx8HwEaWjhY9pDaYglmpJiq3g" crossorigin="anonymous">
     </head>
     <body>
         <div id="app">
