Fix js integrity

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11" integrity="sha384-OZmxTjkv7EQo5XDMPAmIkkvywVeXw59YyYh6zq8UKfkbor13jS+5p8qMTBSA1q+F" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue-router@3.3.4" integrity="sha384-5ysQLF+E+9b/+wTnlloO2ONS/4Hy5q6LeqxMyyGo9thRvTM1fuX3HjtghzRbHORv" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js" integrity="sha384-D3h8dHOchE4dpiSVF7wlFB9zw6Zq36WzHs85BgdKSSzLi7iamPNts7BGXd1qmz3y" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vue-select@3.11.2/dist/vue-select.min.js" integrity="sha384-+DuwySt9/V4X8jnNrpdUumsBUBmj2yMfKCQbJdH2Zkdddy72uzvNwaNXZ+8k2R/B" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/xterm@4.15.0/lib/xterm.min.js" integrity="sha384-vxhRmVNOQS04V6QkPmKqOmHo0k4110VgJO83Zyyd4DyWz2eoh0/qYUnn0HxU71RP" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue-select@3.11.2/dist/vue-select.js" integrity="sha384-A4eMJfBiNuJaZisu4QKrjYmg8YJztUPuh9b5GKmxct2gW376LXhJkZIxfRIJ0hKN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/xterm@4.15.0/lib/xterm.js" integrity="sha384-zgE0cZ8wDF2n7oQW+1Ji/LIb76cyCDy3Vn95aRvhRup4qSQy2r6jzW1Y2KK8+bm2" crossorigin="anonymous"></script>
         <script src="fitAddon.js"></script>
         <link rel="stylesheet" href="/style.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-select@3.11.2/dist/vue-select.css" integrity="sha256-UOIZG7xYf0GO+FyQ44Mg1IMCo/2Y5T5ar2OooAanClQ=" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-select@3.11.2/dist/vue-select.css" integrity="sha384-xjUNC7q43pF9pW7sd3Cdmy9J+Fnuw8lQh70IeF7xLQN3pJq1cfFT6wpzGMS/7Gk4" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.15.0/css/xterm.css" integrity="sha384-KX/RrKZocv0anGkMv5H4RernMDcOW5zA5PqbmnxJx8HwEaWjhY9pDaYglmpJiq3g" crossorigin="anonymous">
     </head>
     <body>
